<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="24dp"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/logo_bpbd"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/selamat_datang"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        android:background="@mipmap/login" />
    <TextView
        android:id="@+id/selamat_datang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selamatdatang"
        android:layout_margin="10dp"
        android:textSize="48px"
        android:textColor="@color/colorTextWhite"
        android:textAllCaps="true"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/nama_apk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/namaapk"
        android:textColor="@color/colorTextWhite"
        android:textSize="56px"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"/>
    <EditText
        android:id="@+id/usernameSignin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:textColor="@color/colorTextWhite"
        android:textColorHint="@color/colorTextWhite"/>
    <EditText
        android:id="@+id/passwordSignin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:imeActionId="6"
        android:imeActionLabel="Sign In"
        android:imeOptions="actionDone"
        android:textColor="@color/colorTextWhite"
        android:textColorHint="@color/colorTextWhite"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">
        <Button
            android:id="@+id/button_signup"
            android:backgroundTint="@color/colorAccent"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:text="@string/daftar"
            android:layout_weight="1"
            android:textColor="@color/colorTextWhite" />
        <Button
            android:id="@+id/button_signin"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/masuk"
            android:layout_weight="1"
            android:textColor="@color/colorTextWhite"/>
    </LinearLayout>
</LinearLayout>