<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="18dp"
    android:orientation="vertical"
    tools:context=".RegisterActivity"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/logo_bpbd"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/selamat_datang"
        android:layout_centerHorizontal="true"
        android:background="@mipmap/login" />
    <TextView
        android:id="@+id/registrasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/registrasi"
        android:textSize="75px"
        android:textColor="@color/colorTextWhite"/>
    <EditText
        android:id="@+id/et_emailSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:textColor="@color/colorTextWhite"
        android:textColorHint="@color/colorTextWhite"/>
    <EditText
        android:id="@+id/et_passwordSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:textColor="@color/colorTextWhite"
        android:textColorHint="@color/colorTextWhite"/>
    <EditText
        android:id="@+id/et_passwordSignup2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:hint="@string/kpassword"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:imeActionLabel="Sign Up"
        android:imeOptions="actionDone"
        android:textColorHint="@color/colorTextWhite"
        android:textColor="@color/colorTextWhite"/>
    <Button
        android:id="@+id/button_signupSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/daftar"
        android:textColor="@color/colorTextWhite"
        android:background="@color/colorAccent"/>
</LinearLayout>